...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
...
                        android:layout_marginRight="8dp"
                        android:text="Open"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/admin_reportdetails_alt_id" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/admin_reportdetails_button_viewlog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:clickable="true"
...
                            android:text="View Report Log"
                            android:textAllCaps="true"
                            android:textSize="18sp" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
...
                        app:cardBackgroundColor="@color/OffWhiteBackground"
                        app:layout_constraintBottom_toTopOf="@+id/admin_reportdetails_button_viewlog"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="0dp"
                            android:orientation="horizontal"
                            app:layout_constraintTop_toBottomOf="@+id/admin_reportdetails_alt_lastaction">

                            <android.support.v7.widget.CardView
                                android:id="@+id/cardviewOpen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:stateListAnimator="@animator/button_anim"
...
                                    android:text="Open"
                                    android:textColor="@color/StandardText"
                                    android:textSize="18sp" />
                            </android.support.v7.widget.CardView>

                            <android.support.v7.widget.CardView
                                android:id="@+id/cardviewClosed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:stateListAnimator="@animator/button_anim"
...
                                    android:text="Closed"
                                    android:textColor="@color/StandardText"
                                    android:textSize="18sp" />
                            </android.support.v7.widget.CardView>

                            <android.support.v7.widget.CardView
                                android:id="@+id/cardviewResolved"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:stateListAnimator="@animator/button_anim"
...
                        android:text="United States"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/admin_reportdetails_alt_description" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/admin_reportdetails_button_attachments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
...
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/admin_reportdetails_button_editcategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:alpha=".5"
                        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView1"
...
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                        </LinearLayout>
                    </HorizontalScrollView>

                    <ImageView
                        android:id="@+id/admin_reportdetails_button_edittags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:alpha=".5"
                        app:layout_constraintBottom_toBottomOf="@+id/screwjimmy"
...
